K8S/Local/agents-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: agents-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: agentservice
  template:
    metadata:
      labels:
        app: agentservice
    spec:
      containers:
        - name: agentservice
          image: extiriority/agentservice:latest
---
apiVersion: v1
kind: Service
metadata:
  name: agents-clusterip-srv
spec:
  - type: ClusterIP
    selector:
      app: agentservice
    ports:
      - protocol: TCP
        port: 80
        targetPort: 80
