K8S/Local/equipments-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: equipments-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: equipmentservice
  template:
    metadata:
      labels:
        app: equipmentservice
    spec:
      containers:
        - name: equipmentservice
          image: extiriority/equipmentservice:latest
---
apiVersion: v1
kind: Service
metadata:
  name: equipments-clusterip-srv
spec:
  - type: ClusterIP
    selector:
      app: equipmentservice
    ports:
      - protocol: TCP
        port: 80
        targetPort: 80
