K8S/Local/ingress-srv.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
    - host: ica-taskmaster.org
      http:
        paths:
          - path: /api/agents
            pathType: Prefix
            backend:
              service:
                name: agents-clusterip-srv
                port:
                  number: 80
          - path: /api/c/agents
            pathType: Prefix
            backend:
              service:
                name: equipments-clusterip-srv
                port:
                  number: 80
